import "tutorial.proto";
import "util.proto";
import "commands.proto";
package protobuf.srl.lecturedata;

message LectureSlide {
    required string lectureId = 1;
    //id of this slide
    required string id = 2;
    //thumbnail
    repeated LectureElement elements = 3;
}

message LectureElement {
    //id of this element
    required string id = 2;
    optional int32 x_position = 3;
    optional int32 y_position = 4;
    optional int32 x_dimension = 5;
    optional int32 y_dimension = 6;

    oneof ElementType {
        protobuf.srl.tutorial.ActionCreateTextBox textBox = 7;
        Image image = 8;
        SketchArea sketchArea = 9;
        EmbeddedHtml embeddedHtml = 11;
    }
}

message EmbeddedHtml {
    optional string embeddedHtml = 1;
}

message Image {
    optional string src = 8;
    optional float orientation = 9;
}

message SketchArea {
    //srlSketch object if proto include works
    optional protobuf.srl.commands.SrlUpdateList recorededSketch = 10;
}

/**
 * used for navigating different lectures or lecture subgroups
 */
message LectureNavigator {
    optional string nextLectureId = 1;
    optional int32 nextSlide = 2;
    optional string nextLectureGroupId = 3;
}
